# Mutli-Agent-System-CrewAI

./: README.md  app.py  app2.py  pyproject.toml  requirements.txt
outputs/: Artificial_Intelligence_20250815_010445.md  Artificial_Intelligence_20250815_011305.md  Artificial_Intelligence_20250815_012223.html  Artificial_Intelligence_20250815_012223.md  Artificial_Intelligence_20250815_014126.html  Artificial_Intelligence_20250815_014126.md
